@@ -4,6 +4,7 @@
 	* actors.cc: Fixed recent invisibility palette bug for avatar. Fixed mixing
 	  of rings and gloves in BG due to faulty condition check, and did a
 	  preventive fix for a similar case with two-handed weapons.
+	* combat.cc: Fixed monsters attacking each other (bug #2013092).
 
 2008-07-07	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* objs/objs.cc: Fixed bug that could cause large creatures to attack
